# work3

./: README.md
s0/: CMakeLists.txt  main.cpp  team.cpp  team.h
script/: TASK2.py  TASK3.py  TASK4.PY  TASK5.PY  TASK6.py
src/: CMakeLists.txt  TASK2.cpp  TASK3.cpp  TASK4.cpp  TASK5.cpp  TASK6.cpp
student/: implementation.py  main.py
